--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>JS basics</title>
-    <script src="basics.js"></script>
+<!--    <script src="basics.js"></script>-->
+    <script src="arraysAndObjects.js"></script>
 </head>
 <body>
     <h1>Hello world</h1>
