--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>JS basics</title>
-    <script src="basics.js"></script>
+<!--    <script src="basics.js"></script>-->
 <!--    <script src="arraysAndObjects.js"></script>-->
+    <script src="functions.js"></script>
 </head>
 <body>
     <h1>Hello world</h1>
