--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
     <h1>Hello world</h1>
     <script>
-        function performReload() {
-            location.reload();
-        }
-        setTimeout(performReload, 1000);
+        setTimeout(() => location.reload(), 1000);
     </script>
 </body>
 </html>
