add console object

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>JS basics</title>
 <!--    <script src="basics.js"></script>-->
 <!--    <script src="arraysAndObjects.js"></script>-->
-    <script src="functions.js"></script>
+<!--    <script src="functions.js"></script>-->
 </head>
 <body>
     <h1>Hello world</h1>
     <script>
-        setTimeout(() => location.reload(), 1000);
+        setTimeout(() => location.reload(), 5000);
     </script>
+    <script src="browserApis.js"></script>
 </body>
 </html>
