--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
 <!--    <script src="basics.js"></script>-->
 <!--    <script src="arraysAndObjects.js"></script>-->
 <!--    <script src="functions.js"></script>-->
+<!--    <script src="locationExamples.js"></script>-->
+    <script src="domExamples.js"></script>
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae blanditiis et in laudantium quia
+        quisquam rem vero. Eveniet laudantium maiores neque nostrum odio possimus quis reprehenderit sunt vero
+        voluptas.</p>
+    <p><a href="#">Ссылка</a></p>
+    <div id="results"></div>
     <script>
-        setTimeout(() => location.reload(), 5000);
+      //  setTimeout(() => location.reload(), 5000);
     </script>
-    <script src="browserApis.js"></script>
+<!--    <script src="consoleExamples.js"></script>-->
 </body>
 </html>
