--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae blanditiis et in laudantium quia
-        quisquam rem vero. Eveniet laudantium maiores neque nostrum odio possimus quis reprehenderit sunt vero
-        voluptas.</p>
+    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae blanditiis et in laudantium quia
+    quisquam rem vero. Eveniet laudantium maiores neque nostrum odio possimus quis reprehenderit sunt vero
+    voluptas.</p>
     <p><a href="#">Ссылка</a></p>
     <div id="results"></div>
     <script>
