--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae blanditiis et in laudantium quia
     quisquam rem vero. Eveniet laudantium maiores neque nostrum odio possimus quis reprehenderit sunt vero
     voluptas.</p>
-    <p><a href="#">Ссылка</a></p>
+    <p><a href="https://ya.ru" target="_blank">Ссылка</a></p>
     <div id="results"></div>
+
+    <input type="text" placeholder="Поле ввода" id="input">
     <script>
       //  setTimeout(() => location.reload(), 5000);
     </script>
