--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 <!--    <script src="arraysAndObjects.js"></script>-->
 <!--    <script src="functions.js"></script>-->
 <!--    <script src="locationExamples.js"></script>-->
-    <script src="domExamples.js"></script>
+<!--    <script src="domExamples.js"></script>-->
+<!--    <script src="alerts.js"></script>-->
 </head>
 <body>
-    <h1>Hello world</h1>
-    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae blanditiis et in laudantium quia
-    quisquam rem vero. Eveniet laudantium maiores neque nostrum odio possimus quis reprehenderit sunt vero
-    voluptas.</p>
-    <p><a href="https://ya.ru" target="_blank">Ссылка</a></p>
+    <div>
+        <h1>Hello world</h1>
+        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda beatae blanditiis et in laudantium quia
+            quisquam rem vero. Eveniet laudantium maiores neque nostrum odio possimus quis reprehenderit sunt vero
+            voluptas.</p>
+        <p><a href="https://ya.ru" target="_blank">Ссылка</a></p>
+    </div>
     <div id="results"></div>
 
     <input type="text" placeholder="Поле ввода" id="input">
