--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!--    <script src="locationExamples.js"></script>-->
 <!--    <script src="domExamples.js"></script>-->
 <!--    <script src="alerts.js"></script>-->
+    <script src="windowsExamples.js"></script>
 </head>
 <body>
     <div>
@@ -21,6 +22,8 @@
     <div id="results"></div>
 
     <input type="text" placeholder="Поле ввода" id="input">
+    <hr>
+    <button type="button" id="windowOpenButton">Открыть окно</button>
     <script>
       //  setTimeout(() => location.reload(), 5000);
     </script>
