add window print

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <input type="text" placeholder="Поле ввода" id="input">
     <hr>
     <button type="button" id="windowOpenButton">Открыть окно</button>
+    <button type="button" id="windowPrintButton">Печать</button>
     <script>
       //  setTimeout(() => location.reload(), 5000);
     </script>
