add clipboard examples

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <hr>
     <button type="button" id="windowOpenButton">Открыть окно</button>
     <button type="button" id="windowPrintButton">Печать</button>
+    
+    <hr>
+
+    <label>Код
+        <input type="text" value="1234" id="code">
+    </label>
+    <button type="button" id="copy">Копировать</button>
+    <button type="button" id="paste">Вставить</button>
+
     <script>
       //  setTimeout(() => location.reload(), 5000);
     </script>
