add intervals & timeouts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!--    <script src="domExamples.js"></script>-->
 <!--    <script src="alerts.js"></script>-->
     <script src="windowsExamples.js"></script>
+    <script src="timeouts.js"></script>
 </head>
 <body>
     <div>
