add date examples

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <!--    <script src="locationExamples.js"></script>-->
 <!--    <script src="domExamples.js"></script>-->
 <!--    <script src="alerts.js"></script>-->
-    <script src="windowsExamples.js"></script>
-    <script src="timeouts.js"></script>
+<!--    <script src="windowsExamples.js"></script>-->
+<!--    <script src="timeouts.js"></script>-->
+    <script src="dates.js"></script>
 </head>
 <body>
     <div>
