add promises with fetch

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!--    <script src="windowsExamples.js"></script>-->
 <!--    <script src="timeouts.js"></script>-->
     <script src="dates.js"></script>
+    <script src="fetchExamples.js"></script>
 </head>
 <body>
     <div>
@@ -35,6 +36,12 @@
     </label>
     <button type="button" id="copy">Копировать</button>
     <button type="button" id="paste">Вставить</button>
+    
+    <hr>
+    <form action="" id="githubForm">
+        <input type="text" id="username" name="username" placeholder="Github username">
+        <button>Скачать данные из github</button>
+    </form>
 
     <script>
       //  setTimeout(() => location.reload(), 5000);
